--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,4 @@
-python-3.10.7
-asgiref==3.3.0
-astroid==2.4.2
-autopep8==1.5.4
-colorama==0.4.4
-dj-database-url==0.5.0
-Django==3.1.3
-django-env-settings==1.1.0.0
-django-heroku==0.3.1
-gunicorn==20.0.4
-isort==5.6.4
-lazy-object-proxy==1.4.3
-mccabe==0.6.1
-psycopg2==2.7.7
-pycodestyle==2.6.0
-pylint==2.6.0
-python-decouple==3.3
-python-dotenv==0.15.0
-pytz==2020.4
-six==1.15.0
-sqlparse==0.4.1
-toml==0.10.2
-typed-ast==1.4.1
-waitress==1.4.4
-whitenoise==5.2.0
-wrapt==1.12.1
+asgiref==3.5.2
+Django==4.1.1
+sqlparse==0.4.3
+tzdata==2022.2
